--- a/blocks/places.css
+++ b/blocks/places.css
@@ -6,8 +6,9 @@
   margin: 142px auto 76px;
 }
 
-.place__content {
+.places__content {
   width: 100%;
+  gap: 48px 40px;
   display: grid;
   grid-template-columns: 460fr 484fr;
   grid-template-rows: auto auto 1fr;
@@ -15,103 +16,99 @@
     "title website"
     "image paragraphs"
     "button paragraphs";
-  gap: 48px 40px;
 }
 
-.place__title {
+.places__title {
   grid-area: title;
-  font-size: 72px;
   font-weight: 900;
+  font-size: 72px;
   line-height: 76px;
-  align-self: end;
-  text-transform: capitalize;
   margin-bottom: 0;
   margin-top: 0;
-}
-
-.place__website {
-  grid-area: website;
   align-self: end;
+  text-transform: capitalize;
 }
 
-.place__url-heading {
-  font-size: 12px;
-  line-height: 1;
-  letter-spacing: calc(0.12 * 12px);
-  text-transform: uppercase;
-  color: #aaa;
-  margin-bottom: 8px;
-  margin-top: 0;
-}
-
-.place__artist {
-  font-size: 18px;
-  line-height: 22px;
-  margin-top: 0;
-  margin-bottom: 5px;
-}
-.place__images {
-  position: relative;
-}
-
-.place__images {
+.places__images {
   grid-area: image;
-  display: block;
   width: 100%;
-  aspect-ratio: 1 / 1;
-  object-fit: cover;
-  object-position: center;
+  display: block;
   box-shadow: 10px 10px 25px 0px #00000050;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+  position: relative;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  object-position: center;
 }
-.place__image-12 {
+.places__image-12 {
   width: 460px;
   height: 460px;
 }
-.place__images:hover:before {
+.places__images:hover:before {
   content: "";
   position: absolute;
   inset: 0;
   background-color: #00000080;
   cursor: pointer;
 }
+.places__website {
+  grid-area: website;
+  align-self: end;
+}
 
-.place__paragraphs {
+.places__url-heading {
+  text-transform: uppercase;
+  color: #aaa;
+  font-size: 12px;
+  line-height: 1;
+  letter-spacing: calc(0.12 * 12px);
+  margin-top: 0;
+  margin-bottom: 8px;
+}
+
+.places__artist {
+  font-size: 18px;
+  line-height: 22px;
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.places__paragraphs {
   grid-area: paragraphs;
   display: flex;
   flex-direction: column;
   gap: 25px;
 }
 
-.place__paragraph {
+.places__paragraph {
   font-size: 18px;
   line-height: 163%;
   margin: 0;
 }
 
-.place__button {
+.places__button {
+  display: flex;
   grid-area: button;
   width: 289px;
   height: 48px;
-  display: flex;
+  background: rgba(255, 255, 255, 1);
   justify-content: center;
   align-items: center;
-  background: rgba(255, 255, 255, 1);
   font-size: 18px;
+  font-weight: 600;
+  color: #fff;
+  line-height: 1;
   border-radius: 4px;
   border: none;
   background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
   box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
-  font-weight: 600;
-  line-height: 1;
-  color: #fff;
 }
 
-.place__button:hover {
+.places__button:hover {
   cursor: pointer;
   background: linear-gradient(
     90deg,
@@ -126,17 +123,17 @@
     gap: 72px;
   }
 
-  .place__content {
+  .places__content {
     grid-template-columns: 340fr 352fr;
     gap: 48px 28px;
   }
 
-  .place__title {
+  .places__title {
     font-size: 42px;
     line-height: 46px;
   }
 
-  .place__paragraph {
+  .places__paragraphs {
     font-size: 16px;
   }
 
@@ -146,7 +143,7 @@
       gap: 50px;
     }
 
-    .place__content {
+    .places__content {
       grid-template-columns: 1fr;
       grid-template-rows: auto;
       grid-template-areas:
@@ -158,17 +155,17 @@
       gap: 30px;
     }
 
-    .place__title {
+    .places__title {
       margin: 0 16px;
       font-size: 32px;
       line-height: 35px;
     }
 
-    .place__website {
+    .places__website {
       margin: 0 16px;
     }
 
-    .place__paragraphs {
+    .places__paragraphs {
       margin: 0 16px;
     }
   }
